Ensure the amount of curves passed for per channel is not too low.

It seems we may have had a period where too few curves were stored
in the config. This commit appends identity curves for the missing
entries, avoiding crashes.

BUG:428349
CCBUG:411917